swen430as2/tests/valid/null/Null_Valid_4.while
bool neq(null x, null y) {
  return x != y;
}

void main() {
    assert !neq(null,null);
}