swen430as2/tests/invalid/casts/Cast_Invalid_3-TC01.while
void main() {
    int|null x = null;
    int|bool y = (int|bool) x;
}
